--- a/FrontEnd/FrontEnd/package.json
+++ b/FrontEnd/FrontEnd/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "0.2.2",
     "@tailwindcss/vite": "4.1.4",
     "axios": "1.9.0",
+    "js-cookie": "3.0.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "7.56.4",
